--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "handlebars": "^4.7.6",
     "lodash": "^4.17.20",
     "lodash.debounce": "^4.0.8",
-    "pnotify": "^5.1.2"
+    "pnotify": "^5.1.2",
+    "react-loader-spinner": "^3.1.14"
   }
 }
