--- a/package.json
+++ b/package.json
@@ -51,12 +51,16 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "basiclightbox": "^5.0.3",
+    "bootstrap": "^4.5.3",
     "core-js": "^3.6.5",
     "debounce": "^1.2.0",
     "handlebars": "^4.7.6",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "lodash.debounce": "^4.0.8",
     "pnotify": "^5.1.2",
+    "popper.js": "^1.16.1",
     "react-loader-spinner": "^3.1.14"
   }
 }
